--- a/package.json
+++ b/package.json
@@ -16,24 +16,34 @@
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@prisma/client": "^4.4.0",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "draft-js": "^0.11.7",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "next-transpile-modules": "^9.1.0",
+    "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-quill": "^2.0.0",
     "react-sortablejs": "^6.1.4",
     "sass": "^1.55.0",
-    "sortablejs": "^1.15.0"
+    "sortablejs": "^1.15.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/draft-js": "^0.11.9",
-    "@types/node": "18.8.1",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.8.1",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/sortablejs": "^1.15.0",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
@@ -42,6 +52,7 @@
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
