--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-sortablejs": "^6.1.4",
     "sass": "^1.55.0",
     "sortablejs": "^1.15.0",
+    "swr": "^1.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
