--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-quill": "^2.0.0",
     "react-sortablejs": "^6.1.4",
