--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 DATABASE_URL = "postgresql://kaua_:4pkj6HpvZgp3JNveqMMDPw@free-tier10.gcp-southamerica-east1.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full&options=--cluster%3Dsturdy-chum-384"
+NEXTAUTH_URL = 'http://localhost:3000'
+# EMAIL_FROM='Kauã Lúcio <kauadefreitas.s992@gmail.com>'
+# EMAIL_USERNAME='kauadefreitas.s992@gmail.com'
+# EMAIL_PASSWORD='kaua12369'
+EMAIL_SERVER='smtp://kauadefreitas.s992@gmail.com:kaua12369@smtp.gmail.com:587'
+EMAIL_FROM='Kauã Lúcio <kauadefreitas.s992@gmail.com>'
