--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.4.0",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.1.3",
@@ -24,7 +25,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "next": "12.3.1",
+    "next-auth": "^4.16.4",
     "next-transpile-modules": "^9.1.0",
+    "nodemailer": "^6.8.0",
     "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
