--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.4.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/cookies": "^0.7.7",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "draft-js": "^0.11.7",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
     "next-transpile-modules": "^9.1.0",
     "nodemailer": "^6.8.0",
+    "nookies": "^2.5.2",
     "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
