--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "draft-js": "^0.11.7",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "next": "12.3.1",
-    "next-auth": "^4.16.4",
     "next-transpile-modules": "^9.1.0",
     "nodemailer": "^6.8.0",
     "nookies": "^2.5.2",
