some layout changes

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-quill": "^2.0.0",
     "react-sortablejs": "^6.1.4",
     "sass": "^1.55.0",
