add image logic and fix form control components props type's error

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 DATABASE_URL = "postgresql://kaua_:4pkj6HpvZgp3JNveqMMDPw@free-tier10.gcp-southamerica-east1.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full&options=--cluster%3Dsturdy-chum-384"
 
 JWT_SECRET="61a0d7b6-4034-4f06-b295-d79eee9b6cd8"
+
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyBzD8TIdqOCaKPUjvTtmD7y47ecTyGQKf4"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="cms-panel-29384.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="cms-panel-29384"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="cms-panel-29384.appspot.com"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="326647259253"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:326647259253:web:b57a34f7db852d2197983c"
