--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "draft-js": "^0.11.7",
+    "firebase": "^9.14.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
